graphql-toolkit/tests/snapshots/it_ser_pretty_formatter_query__mutation_named.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
mutation MyMutation {
  dropTables
}
