graphql-toolkit/tests/snapshots/it_ser_pretty_formatter_query__query_and_fragment.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
{
  field1
}
fragment MyFragment on SomeType {
  field2
}
