graphql-toolkit/tests/snapshots/it_ser_pretty_formatter_query__query_and_fragment_with_directive.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
{
  field1
}
fragment MyFragment on SomeType @defer {
  field2
}
