graphql-toolkit/tests/snapshots/it_ser_pretty_formatter_query__query_multiple_fields.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
{
  field1
  field2
}
