graphql-toolkit/tests/snapshots/it_ser_pretty_formatter_query__query_multiple_operations.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
query MyQuery {
  field1
}
query YourQuery {
  field2
}
