graphql-toolkit/tests/snapshots/it_ser_pretty_formatter_query__query_with_field_and_bytes_argument.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
{
  field(argv: [1,2,3]) {
    field2
  }
}
