graphql-toolkit/tests/snapshots/it_ser_pretty_formatter_query__query_with_field_and_directive.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
{
  field1 @defer {
    field2
  }
}
