graphql-toolkit/tests/snapshots/it_ser_pretty_formatter_query__query_with_field_and_list_argument_nested.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
{
  field(argv: [[1], [2, 3], [4, 5, 6]]) {
    field2
  }
}
